crates/ralph-tui/tests/snapshots/integration_snapshots__alert_cleared.snap
---
source: crates/ralph-tui/tests/integration_snapshots.rs
expression: snapshot
---
iteration: 0
current_view: 2
total_iterations: 3
following_latest: true
has_alert: false
alert_iteration: ~
search_query: ~
search_matches: 0
search_current_match: 0
pending_hat: —
show_help: false
