crates/ralph-tui/tests/snapshots/integration_snapshots__iter2_state.snap
---
source: crates/ralph-tui/tests/integration_snapshots.rs
expression: harness.capture_state()
---
iteration: 2
current_view: 0
total_iterations: 0
following_latest: true
has_alert: false
alert_iteration: ~
search_query: ~
search_matches: 0
search_current_match: 0
pending_hat: 📋Planner
show_help: false
