crates/ralph-tui/tests/snapshots/integration_snapshots__scroll_preserved.snap
---
source: crates/ralph-tui/tests/integration_snapshots.rs
expression: harness.capture_state()
---
iteration: 3
current_view: 0
total_iterations: 3
following_latest: false
has_alert: false
alert_iteration: ~
search_query: ~
search_matches: 0
search_current_match: 0
pending_hat: 📋Planner
show_help: false
